--- a/index.html
+++ b/index.html
@@ -2,21 +2,113 @@
 
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <div id="main">
+        <main id="main">
             <header>
-                <div id="title">Title</div>
-                <figure id="img-title">
-                    <img src="" alt="" id="img-top">
-                    <figcaption> This is the caption</figcaption>
+                <div id="title">
+                    <h1 id="title"> Dolphins</h1>
+                    <p>Interesting facts about Dolphins</p>
+                </div>
+                <figure id="img-fig">
+                    <img src="dolphins.jpg" alt="" id="img-top">
+                    <figcaption id="img-caption"> Dolphins are popularly noted for their grace, intelligence, playfulness, and friendliness to humans</figcaption>
                 </figure>
             </header>
+            <section id="dolphin-facts">
 
+                <h3 id="headline">Here are some facts about dolphins</h3>
+                <ul>
+                    <li><strong>Natural History:</strong>
+                        Dolphins can live in either fresh or salt water. Distributed in marine environments worldwide, 
+                        they range from equatorial to subpolar waters and also can be found in many major river systems. 
+                        The common and bottlenose dolphins are widely distributed in warm and temperate seas. 
+                        They are swift swimmers; the bottlenose can attain speeds of nearly 30 km/hr (18.5 mph) in short bursts, 
+                        and common dolphins are even faster. Most river dolphins live in fresh water that may be several thousand 
+                        kilometres from the sea, although some spend their lives in coastal waters. Dolphins are social, 
+                        gathering in schools from five to several thousand. All are carnivorous, feeding on fish, squid, 
+                        and other invertebrates.
+                    </li>
+                    <li><strong>Socialization:</strong>
+                        Dolphins are highly social animals, often living in pods of up to a dozen individuals, though pod 
+                        sizes and structures vary greatly between species and locations. In places with a high abundance of 
+                        food, pods can merge temporarily, forming a superpod; such groupings may exceed 1,000 dolphins. 
+                        Membership in pods is not rigid; interchange is common. They establish strong social bonds, 
+                        and will stay with injured or ill members, helping them to breathe by bringing them to the surface if needed.
+                    </li>
+                    <li><strong>Reproduction and sexuality:</strong>
+                        Dolphin copulation happens belly to belly; though many species engage in lengthy foreplay, the 
+                        actual act is usually brief, but may be repeated several times within a short timespan. 
+                        The gestation period varies with species; for the small Tucuxi dolphin, this period is around 
+                        11 to 12 months, while for the orca, the gestation period is around 17 months. 
+                        Typically dolphins give birth to a single calf, which is, unlike most other mammals, 
+                        born tail first in most cases.[90] They usually become sexually active at a young age, 
+                        even before reaching sexual maturity.[87] The age of sexual maturity varies by species and sex.
+                    </li>
+                    <li><strong>Sleeping:</strong>
+                        Generally, dolphins sleep with only one brain hemisphere in slow-wave sleep at a time, thus maintaining 
+                        enough consciousness to breathe and to watch for possible predators and other threats. Sleep stages earlier 
+                        in sleep can occur simultaneously in both hemispheres.[98][99][100] In captivity, dolphins seemingly enter 
+                        a fully asleep state where both eyes are closed and there is no response to mild external stimuli. In this case, 
+                        respiration is automatic; a tail kick reflex keeps the blowhole above the water if necessary. Anesthetized 
+                        dolphins initially show a tail kick reflex
+                    </li>
+                    <li><strong>Feeding:</strong>
+                        There are various feeding methods among and within species, some apparently exclusive to a single population. 
+                        Fish and squid are the main food, but the false killer whale and the orca also feed on other marine mammals. 
+                        Orcas on occasion also hunt whale species larger than themselves.[104] Different breeds of dolphins vary 
+                        widely in the number of teeth they possess. The orca usually carries 40–56 teeth while the popular bottlenose 
+                        dolphin has anywhere from 72 to 116 conical teeth and its smaller cousin the common dolphin has 188–268 teeth: 
+                        the number of teeth that an individual carries varies widely between within a single species. Hybrids between 
+                        common and bottlenose bred in captivity had a number of teeth intermediate between that of their parents..
+                    </li>
+                    <li><strong>Conservation status:</strong>
+                        Information regarding current population levels and trends remains elusive for many dolphin species. 
+                        Although bottlenose dolphins are species of least concern, according to the International Union for Conservation
+                         of Nature (IUCN), several dolphins are at risk of extinction. Dolphin species that the IUCN considers 
+                         vulnerable or near threatened include the Indo-Pacific humpbacked dolphin (Sousa chinensis), 
+                         the Irrawaddy dolphin (Orcaella brevirostris), and the Australian snubfin dolphin (O. heinsohni). 
+                         The most vulnerable dolphins include the Ganges river dolphin (Platanista gangetica) and the Indus 
+                         river dolphin (P. minor), which are classified as endangered species, and the Atlantic humpbacked 
+                         dolphin (Sousa teuszii), which is classified as critically endangered.
+                    </li>
+                    <li><strong>Paleontology and classification:</strong>
+                        Dolphins first appear as fossils from the Early Miocene Epoch (23 million to 16 million years ago)—a 
+                        time when the cetacean fauna was more diverse. All of today’s dolphin groups were present in the 
+                        Miocene, as were at least three extinct families whose members would be called dolphins 
+                        (Eurhinodelphidae, Hemisyntrachelidae, and Acrodelphidae).
+                    </li>
+                    <li><strong>Threats:</strong>
+                        Dolphins have few marine enemies. Some species or specific populations have none, making them apex predators. 
+                        For most of the smaller species of dolphins, only a few of the larger sharks, such as the bull shark, 
+                        dusky shark, tiger shark and great white shark, are a potential risk, especially for calves. 
+                        Some of the larger dolphin species, especially orcas, may also prey on smaller dolphins, 
+                        but this seems rare. Dolphins also suffer from a wide variety of diseases and parasites
+                    </li>
+                    <li><strong>Impacts of climate change:</strong>
+                        Dolphins are marine mammals with broad geographic extent, making them susceptible to climate change in 
+                        various ways. The most common effect of climate change on dolphins is the increasing water temperatures 
+                        across the globe. This has caused a large variety of dolphin species to experience range shifts, in which 
+                        the species move from their typical geographic region to cooler waters. Another side effect of increasing 
+                        water temperatures is the increase in harmful algae blooms, which has caused a mass die-off of bottlenose dolphins.
+                    </li>
+                </ul>
+                <blockquote>
+                    <p>The Faroe Islands population was exposed to methylmercury largely from contaminated pilot whale meat, 
+                        which contained very high levels of about 2 mg methylmercury/kg</p>
+                        <cite>--World Health Ogranization</cite>
+                </blockquote>
+                <h3>
+                    If you have more time, you should read more about Dolphins on 
+                    <a href="https://en.wikipedia.org/wiki/Dolphin" target="_blank">Wilipedia.</a>
+                </h3>
+            </section>
             
-        </div>
+        </main>
        
 
     </body>
