updated alt message for an image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Dolphins facts</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -15,7 +16,7 @@
                     <p>Interesting facts about Dolphins</p>
                 </div>
                 <figure id="img-fig">
-                    <img src="dolphins.jpg" alt="" id="img-top">
+                    <img src="dolphins.jpg" alt="Picture of Dolphin" id="img-top">
                     <figcaption id="img-caption"> Dolphins are popularly noted for their grace, intelligence, playfulness, and friendliness to humans</figcaption>
                 </figure>
             </header>
